2001-01-18  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/Defn.pm: mkdir needs two args in perl versions < 5.6.0
	Add check for system call status

	* Basic.pm: Had erroneously removed File::Copy

2001-01-11  Timothy Jenness  <t.jenness@jach.hawaii.edu>

	* Display.pm: Delay loading of specific display classes until required

	* Recipe.pm (_check_obey_status_string): Add check for ORAC__BADENG

	* Msg/Task/ADAM.pm: Translate to ORAC__BADENG

	* Constants.pm: Add ORAC__BADENG

2001-01-11  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/Michelle.pm: Now a subclass of CGS4

	* Display/KAPVIEW.pm: Use ORAC::Msg::EngineLaunch

	* Display/P4.pm:  Use ORAC::Msg::EngineLaunch

	* Calib/SCUBA.pm: Use ORAC::Msg::EngineLaunch

	* Convert.pm (new): Use ORAC::Msg::EngineLaunch

2001-01-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/SCUBA.pm: Use
	orac_determine_initial_algorithm_engines.

	* Inst/CGS4.pm (start_algorithm_engines): Use
	orac_determine_initial_algorithm_engines.

	* Inst/IRCAM.pm (start_algorithm_engines): Use
	orac_determine_initial_algorithm_engines.

	* Inst/Defn.pm (orac_determine_initial_algorithm_engines): Now
	list monoliths required for pre-launch 

	* Msg/EngineLaunch.pm: - allow for launch of multiple engines at
	once. Provide contact_all method. Make sure that each
	instantiation returns the same object instance.

2001-01-09  Timothy Jenness  <t.jenness@jach.hawaii.edu>

	* Inst/Defn.pm (orac_engine_description): Add function to support 
	ORAC::Msg::EngineLaunch.

	* Msg/EngineLaunch.pm: Create 

2001-01-09  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/Defn.pm (orac_determine_recipe_search_path): Add search
	path information for primitives and recipes

	* Basic.pm: Move guts to ORAC::Recipe 

	* Recipe.pm: Create. Complete reworking of ORAC::Basic recipe handling

	* General.pm (log10): Fix -w warning by not importing POSIX::log10

	* Display/KAPVIEW.pm (select_section): Fix = in conditional

	* Core.pm (orac_process_frame): Use ORAC::Recipe
