@@ -1,3 +1,7 @@
+2001-01-19  Timothy Jenness  <t.jenness@jach.hawaii.edu>
+
+	* Display/KAPVIEW.pm (engine_launch_object): Fix typo in method name
+
 2001-01-18  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Inst/Defn.pm: mkdir needs two args in perl versions < 5.6.0
